newweb/nmrbox/src/custom-theme.scss
/* ... */
.sw-type-icon-relaxation {
  background-image: url('./assets/icons/sw-icon-relaxation-240x40.svg');
}

.sw-type-icon-chemical-shift {
  background-image: url('./assets/icons/sw-icon-chemical-240x40.svg');
}

.sw-type-icon-molecular-modeling {
  background-image: url('./assets/icons/sw-icon-molecular-240x40.svg');
}

.sw-type-icon-structure {
  background-image: url('./assets/icons/sw-icon-structure-240x40.svg');
}

.sw-type-icon-rdc, .sw-type-icon-residual-dipole-coupling {
  background-image: url('./assets/icons/sw-icon-rdc-240x40.svg');
}

.rp-icon-metabolomics {
  background-image: url('./assets/icons/rp-icon-metabolomics-240x40.svg');
}

.rp-icon-protein-dynamics {
  background-image: url('./assets/icons/rp-icon-protein-dynamics-240x40.svg');
}

.rp-icon-protein-structure {
  background-image: url('./assets/icons/rp-icon-protein-structure-240x40.svg');
}

.rp-icon-intrinsically {
  background-image: url('./assets/icons/rp-icon-intrinsically-240x40.svg');
}

/*** MATERIAL CUSTOM STYLES ***/

.mat-app-background {
  background: #fff;
}

/* Material Toolbar */
mat-toolbar {
  .page-title {
    line-height: 1em;
    font-size: 18px;
    font-weight: 200;
    color: #919191;
    margin-left: 10px;
  }
}

mat-toolbar.toolbar-transparent {
  background-color: $nmrbox-gray-light;
}

mat-toolbar, .mat-tab-label, .mat-card {
  font-family: 'Libre Franklin', sans-serif;
}

.mat-toolbar .mat-toolbar-row, .mat-toolbar.mat-primary[_ngcontent-c0] {
  height: 50px !important;
  min-height: 50px !important;
}

.mat-button:hover .mat-button-focus-overlay, .mat-button:hover .mat-button-ripple:hover {
  background-color: transparent;
}

/* Material Grid List */
.mat-grid-list {
  margin-left: 0px; /* to offset tile padding */
}

.mat-grid-tile.tile-dashed, .mat-grid-tile.tile-dashed-row {
  border-color: $nmrbox-gray-dark;
  border-top: 1px dashed;
  border-right: 1px dashed;
  border-bottom: 1px dashed;
  background-color: transparent;
}

.mat-grid-tile.tile-dashed-row, .tile-dashed:nth-of-type(3), .tile-dashed:nth-of-type(6), .tile-dashed:nth-of-type(9), .tile-dashed:nth-of-type(12), .tile-dashed:nth-of-type(15), .tile-dashed:nth-of-type(18) {
  border-right: 0px;
}

.mat-grid-tile.tile-dashed-row {
  border-top: 0px;
}

.mat-grid-tile.tile-solid {
  background-color: transparent;
}

.tile-transparent .mat-card {
  background-color: transparent;
}

/* Material Card */
.mat-card {
  padding: 10px !important;
}

.mat-card:not([class*="mat-elevation-z"]) {
  box-shadow: none !important;
}

.mat-card-header-text {
  margin-left: 0px !important;
}

.mat-card-title {
  font-weight: bold;
}

mat-grid-tile .mat-card-image {
  margin: 0 0px 5px 0px !important;
  width: 100% !important;
}

mat-select {
  .mat-select-placeholder {
    font-size: 14px !important;
  }
  .mat-select-underline, .mat-select-arrow {
    display: none;
  }
}

.mat-input-wrapper {
  margin: 0px !important;
}

/* Material Tabs */
.mat-tab-header {
  border: 0px;
}

.mat-ink-bar {
  display: none;
}

.mat-tab-labels {
  width: 910px !important;
  margin: auto !important;
}

/*
.mat-tab-label {
  color: transparent !important;
  padding: 0px 0px !important;
  display: inline-block;
  margin-right: 30px;
  background-color: transparent !important;
  width: 130px;
  min-width: 130px !important;
  height: 60px;
  background-repeat: no-repeat;
  background-size: 360px 60px;
  background-position: -180px 5px;
  opacity: 1.0;
}*/

.mat-tab-label-active {
  background-position: 0px 5px;
  border: 0px;
}

/*
app-community-list {
  .mat-tab-label:nth-of-type(1) {
    background-image: url('./assets/icons/co-icon-support-240x40.svg');
  }
  .mat-tab-label:nth-of-type(2) {
    background-image: url('./assets/icons/co-icon-events-240x40.svg');
  }
  .mat-tab-label:nth-of-type(3) {
    background-image: url('./assets/icons/co-icon-forum-240x40.svg');
  }
  .mat-tab-label:nth-of-type(4) {
      background-image: url('./assets/icons/co-icon-blog-240x40.svg');
  }
}
*/

/*
app-team-list {
  .mat-tab-label {
    background-position: 0px 5px;
  }
  .mat-tab-label-active {
    background-position: -180px 5px;
  }
  .mat-tab-label:nth-of-type(1) {
    background-image: url('./assets/icons/team-icon-leadership-240x40.svg');
  }
  .mat-tab-label:nth-of-type(2) {
    background-image: url('./assets/icons/team-icon-integral-240x40.svg');
  }
  .mat-tab-label:nth-of-type(3) {
    background-image: url('./assets/icons/team-icon-about-240x40.svg');
  }
  .mat-tab-label:nth-of-type(2) {
    background-image: url('./assets/icons/team-icon-research-240x40.svg');
  }

  mat-tab-body {
    background-size: 90%;
    background: url('/assets/bg-graphics/bg-graphic-team.png') no-repeat 0px -300px;
  }
}*/

app-team-list {
  mat-tab-body {
    background-size: 90%;
    background: url('/assets/bg-graphics/bg-graphic-team.png') no-repeat 0px -300px;
  }
}

/* Misc */

.hidden {
  display: none !important;
}

.section-banner {
  position: relative;
  display: block;
  height: 125px;
  width: 1000px;
  overflow: none;
  background-size: 1000px 125px;
  background-repeat: no-repeat;
  left: 50%;
  margin-left: -600px;
  z-index: 1;
}

.section-banner-bg {
  position: absolute;
  top: 50px;
  left: 0px;
  right: 0px;
  width: 100%;
  height: 125px;
  z-index: 0;
}

.section-banner-software {
  background-image: url('./assets/section-banners/software-banner.png');
}

.section-banner-software-trimmed {
  background-image: url('./assets/section-banners/software-banner-trimmed.png');
}

.section-banner-community {
  background-image: url('./assets/section-banners/community-banner.png');
}

.section-banner-team {
  background-image: url('./assets/section-banners/team-banner.png');
}

.section-submenu {
  position: relative;
  display: block;
  height: 60px;
  width: 100%;
}

.section-detail p {
  padding-right: 33%;
}

/* Swiper */
.swiper-container {
  z-index: 2;
}
/* ... */

